--- a/public/404.html
+++ b/public/404.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
+<meta http-equiv="refresh" content="0; URL=http://www.stephangrein.de:3000">
 <head>
-<title>Error 404</title>
-<link rel="stylesheet" href="/css/error.css" />
-<meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+<title> 404 - Page not found</title>
 </head>
-<body>
-<h1>Error 404</h1>
-<div id="content">
-<h2>Page Not Found</h2><p>Sorry, this is the void.</p>
-</div>
-<div id="footer">
-Powered by <a href="http://perldancer.org/">Dancer</a>.
-</div>
-</body>
+<body> Sorry, this is the void. Go back to <a href="http://www.stephangrein.de:3000"> www stephangrein de </a> if forwarding did not work for you. </body>
 </html>
